# otel-rust

./: .gitignore  README.md
front/: Cargo.toml
front/src/: main.rs
svc1/: Cargo.toml
svc1/src/: main.rs
